feat: create pagination in get rank
