# docs/swagger.json
@@ -299,6 +299,18 @@
                         "description": "Update Rank",
                         "name": "update_rank",
                         "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Page",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Per page",
+                        "name": "perPage",
+                        "in": "query"
                     }
                 ],
                 "responses": {
